--- a/src/app/components/carte-interactive/carte-interactive.component.html
+++ b/src/app/components/carte-interactive/carte-interactive.component.html
@@ -6,9 +6,18 @@
   <app-not-bsfr-member *ngIf="!isBSFR; else page" />
   <ng-template #page>
     <p-card
+      header="Localisation des membres de BSFR"
       styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
-      <!-- <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div> -->
-      <div style="height: 600px; outline: none;" leaflet [leafletOptions]="options">
+      <p-messages [enableService]="false" closable="false" severity="info">
+        <ng-template pTemplate>
+          Utilisez la commande /ville dans le salon #rôles-auto-assignable afin
+          d'apparaître sur la carte.
+        </ng-template>
+      </p-messages>
+      <div
+        style="height: 600px; outline: none"
+        leaflet
+        [leafletOptions]="options">
         <div [leafletLayers]="markers"></div>
       </div>
     </p-card>
