--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,39 @@ a:visited {
     color: white;
 }
 
+.p-messages .p-message {
+    margin: 0;
+}
+
+.p-messages .p-message.p-message-info {
+    color: #ffffff;
+    background: rgba(59, 130, 246, 0.46);
+}
+
+.p-messages .p-message.p-message-success {
+    color: #ffffff;
+    background: rgba(34, 197, 94, 0.46);
+}
+
+.p-messages .p-message.p-message-warn {
+    color: #ffffff;
+    background: rgba(234, 179, 8, 0.46);
+}
+
+.p-messages .p-message.p-message-error {
+    color: #ffffff;
+    background: rgba(239, 68, 68, 0.46);
+}
+
+.p-messages .p-message.p-message-info .p-message-icon,
+.p-messages .p-message.p-message-success .p-message-icon,
+.p-messages .p-message.p-message-warn .p-message-icon,
+.p-messages .p-message.p-message-error .p-message-icon {
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+}
+
 .p-datatable .p-datatable-thead > tr > th {
     background: rgba(255, 255, 255, 0.1);
     border-color: rgba(255, 255, 255, 0.2);
@@ -59,6 +92,16 @@ a:visited {
 .p-tabview .p-tabview-nav li .p-tabview-nav-link,
 .p-tabview .p-tabview-panels {
     background: none;
+}
+
+.p-tabview .pi {
+    display: flex;
+    align-items: center;
+}
+
+.p-tabview .pi::before {
+    font-size: 16px;
+    padding: 1px;
 }
 
 .p-tabview .p-tabview-nav-btn.p-link,
