Avancement dans la refonte de Rankedle

--- a/src/app/components/carte-interactive/carte-interactive.component.html
+++ b/src/app/components/carte-interactive/carte-interactive.component.html
@@ -3,7 +3,7 @@
   <div class="text-white">
     <h2>Carte interactive</h2>
   </div>
-  <app-not-bsfr-member *ngIf="!isBSFR; else page" />
+  <!-- <app-not-bsfr-member *ngIf="!isBSFR; else page" /> -->
   <ng-template #page>
     <p-card
       header="Localisation des membres de BSFR"
