--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,21 +47,25 @@ a:visited {
 .p-messages .p-message.p-message-info {
     color: #ffffff;
     background: rgba(59, 130, 246, 0.46);
+    border: 1px solid rgba(29, 78, 216, 0.66);
 }
 
 .p-messages .p-message.p-message-success {
     color: #ffffff;
     background: rgba(34, 197, 94, 0.46);
+    border: 1px solid rgba(21, 128, 61, 0.66);
 }
 
 .p-messages .p-message.p-message-warn {
     color: #ffffff;
     background: rgba(234, 179, 8, 0.46);
+    border: 1px solid rgba(161, 98, 7, 0.66);
 }
 
 .p-messages .p-message.p-message-error {
     color: #ffffff;
     background: rgba(239, 68, 68, 0.46);
+    border: 1px solid rgba(185, 28, 28, 0.66);
 }
 
 .p-messages .p-message.p-message-info .p-message-icon,
