--- a/src/app/components/rankedle/rankedle.component.html
+++ b/src/app/components/rankedle/rankedle.component.html
@@ -4,7 +4,7 @@
     <h2>Rankedle</h2>
   </div>
   <!-- <app-not-bsfr-member *ngIf="!isBSFR; else page" /> -->
-  <ng-template #page>
+  <!-- <ng-template #page> -->
     <div
       class="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
       <p-tabView
@@ -437,5 +437,5 @@
         </p-tabPanel>
       </p-tabView>
     </div>
-  </ng-template>
+  <!-- </ng-template> -->
 </div>
