--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -4,7 +4,7 @@
     <h2>YouTube</h2>
   </div>
   <!-- <app-not-bsfr-member *ngIf="!isBSFR; else page" /> -->
-  <ng-template #page>
+  <!-- <ng-template #page> -->
     <p-card
       header="Publier une run"
       styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
@@ -247,5 +247,5 @@
         </div>
       </div>
     </p-card>
-  </ng-template>
+  <!-- </ng-template> -->
 </div>
