--- a/src/app/components/carte-interactive/carte-interactive.component.html
+++ b/src/app/components/carte-interactive/carte-interactive.component.html
@@ -4,7 +4,7 @@
     <h2>Carte interactive</h2>
   </div>
   <!-- <app-not-bsfr-member *ngIf="!isBSFR; else page" /> -->
-  <ng-template #page>
+  <!-- <ng-template #page> -->
     <p-card
       header="Localisation des membres de BSFR"
       styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
@@ -25,5 +25,5 @@
         <div [leafletLayers]="markers"></div>
       </div>
     </p-card>
-  </ng-template>
+  <!-- </ng-template> -->
 </div>
